RESOLVED FIXED164499
REGRESSION: date-format-tofte.js is super slow
https://bugs.webkit.org/show_bug.cgi?id=164499
Summary REGRESSION: date-format-tofte.js is super slow
Geoffrey Garen
Reported 2016-11-07 17:32:53 PST
REGRESSION: date-format-tofte.js is super slow
Attachments
Patch (1.43 KB, patch)
2016-11-07 17:34 PST, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2016-11-07 17:34:46 PST
Saam Barati
Comment 2 2016-11-08 17:13:03 PST
Maybe it's wroth just making the field a WTFString?
Ryosuke Niwa
Comment 3 2016-11-08 18:53:48 PST
Landing this patch as a pre-reopening test.
Ryosuke Niwa
Comment 4 2016-11-08 18:54:21 PST
Comment on attachment 294106 [details] Patch Clearing flags on attachment: 294106 Committed r208427: <http://trac.webkit.org/changeset/208427>
Ryosuke Niwa
Comment 5 2016-11-08 18:54:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.