REGRESSION: date-format-tofte.js is super slow https://bugs.webkit.org/show_bug.cgi?id=164499

Patch by Geoffrey Garen <ggaren@apple.com> on 2016-11-08
Reviewed by Sam Weinig.

* bytecode/EvalCodeCache.h:
(JSC::EvalCodeCache::CacheKey::operator==): Use character comparison,
not pointer comparison. (This function was always wrong, but I started
calling it in more places.)


Canonical link: https://commits.webkit.org/182160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208427 268f45cc-cd09-0410-ab3c-d52691b4dbfc